--- a/packages/esbuild-lit-demo/package.json
+++ b/packages/esbuild-lit-demo/package.json
@@ -6,8 +6,10 @@
   "license": "ISC",
   "author": "Naoaki Yamada",
   "scripts": {
-    "build": "esbuild esbuild-lit-demo.ts --bundle --outfile=bundle.js",
-    "clean": "rm -f bundle.js",
+    "build": "npm run cp && npm run build:esbuild",
+    "build:esbuild": "esbuild src/lit-demo.ts --bundle --outfile=lib/bundle.js",
+    "clean": "rm -rf src lib",
+    "cp": "rm -rf src && cp -rf ../../src/lit-demo src",
     "serve": "python3 -m http.server 8001"
   },
   "dependencies": {
