--- a/packages/tsc-lit-demo/tsconfig.json
+++ b/packages/tsc-lit-demo/tsconfig.json
@@ -5,7 +5,8 @@
     "module": "esnext",
     "moduleResolution": "node",
     "experimentalDecorators": true,
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+    "outDir": "lib"
   },
-  "include": ["*.ts"]
+  "include": ["src/*.ts"]
 }
