--- a/packages/swc-lit-demo/package.json
+++ b/packages/swc-lit-demo/package.json
@@ -7,11 +7,11 @@
   "author": "Naoaki Yamada",
   "scripts": {
     "build": "npm run cp && npm run build:swc && npm run build:rollup",
-    "build:rollup": "rollup -p node-resolve lib/lit-demo.js --file lib/bundle.js",
+    "build:rollup": "rollup -p node-resolve lib/lit-demo-without-property-decorators.js --file lib/bundle.js",
     "build:swc": "swc src -d lib",
     "clean": "rm -rf src lib",
-    "cp": "rm -rf src && cp -rf ../../src/lit-demo src",
-    "serve": "python3 -m http.server 8002"
+    "cp": "rm -rf src && cp -rf ../../src/lit-demo-without-property-decorators src",
+    "serve": "python3 -m http.server 8003"
   },
   "dependencies": {
     "lit": "^2.2.0"
