--- a/packages/swc-lit-demo/package.json
+++ b/packages/swc-lit-demo/package.json
@@ -7,10 +7,10 @@
   "author": "Naoaki Yamada",
   "scripts": {
     "build": "npm run cp && npm run build:swc && npm run build:rollup",
-    "build:rollup": "rollup -p node-resolve lib/lit-demo-without-property-decorators.js --file lib/bundle.js",
+    "build:rollup": "rollup -p node-resolve lib/lit-demo.js --file lib/bundle.js",
     "build:swc": "swc src -d lib",
     "clean": "rm -rf src lib",
-    "cp": "rm -rf src && cp -rf ../../src/lit-demo-without-property-decorators src",
+    "cp": "rm -rf src && cp -rf ../../src/lit-demo src",
     "serve": "python3 -m http.server 8003"
   },
   "dependencies": {
@@ -18,8 +18,8 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.1.3",
-    "@swc/cli": "^0.1.55",
-    "@swc/core": "^1.2.154",
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.2.206",
     "rollup": "^2.70.0"
   }
 }
