fix(swc-lit-demo): Suppress warning of 'this' has been rewritten to 'undefined' (#1)

--- a/packages/swc-lit-demo/package.json
+++ b/packages/swc-lit-demo/package.json
@@ -7,7 +7,7 @@
   "author": "Naoaki Yamada",
   "scripts": {
     "build": "npm run cp && npm run build:swc && npm run build:rollup",
-    "build:rollup": "rollup -p node-resolve lib/lit-demo.js --file lib/bundle.js",
+    "build:rollup": "rollup --silent -p node-resolve lib/lit-demo.js --file lib/bundle.js",
     "build:swc": "swc src -d lib",
     "clean": "rm -rf src lib",
     "cp": "rm -rf src && cp -rf ../../src/lit-demo src",
